# earworm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  interests.example.md  pyproject.toml
.github/workflows/: ci.yml
config/: earworm.example.toml  feed.example.toml  lexicon.example.toml  pipeline.example.toml  secrets.example.toml  show.example.toml  voice.example.toml
docs/superpowers/specs/: 2026-06-09-pipeline-robustness-design.md
launchd/: com.earworm.autogen.plist  com.earworm.daily.plist  com.earworm.run.plist  com.earworm.watch.plist  daily.sh  install.sh  uninstall.sh
prompts/: autogen.md  ingest.md  ingest_fetch.md  research.md  review.md  script.md  script_review.md  script_revise.md
scripts/: make_cover.py  regen_script.py  render_all.py  rerender_canonical.py  setup_rerun.py  voice_sampler.py
src/earworm/: __init__.py  autogen.py  claude.py  cli.py  config.py  db.py  feed.py  frontmatter.py  ingest.py  lexicon.py  normalize.py  pipeline.py  recent.py  render.py  runner.py  shownotes.py  transcript.py
src/earworm/tts/: __init__.py  audio.py  base.py  download.py  elevenlabs_engine.py  kokoro_engine.py
tests/: test_claim.py  test_config.py  test_dedup.py  test_idempotency.py  test_ingest.py  test_normalize.py  test_pipeline.py  test_recent.py  test_render_watch.py  test_transcript.py
worker/: .dev.vars.example  .gitignore  package.json  schema.sql  tsconfig.json  wrangler.example.jsonc
worker/migrations/: 0001_add_feed.sql
worker/src/: index.ts  rss.ts
