[project]
name = "earworm"
version = "0.1.0"
description = "Research-to-podcast pipeline: topic in, narrated episode out."
requires-python = ">=3.11"
dependencies = [
    "kokoro>=0.9.4",
    "soundfile>=0.12",
    "mutagen>=1.47",
    # spaCy English model used by Kokoro's misaki G2P; pinned so installs are
    # deterministic and offline-capable (otherwise it is re-fetched at runtime).
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "pillow>=12.2.0",
]

[project.scripts]
earworm = "earworm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/earworm"]
