[project]
name = "earworm"
version = "0.1.0"
description = "Give it a topic, get back a narrated podcast episode — researched by Claude, voiced by a local Kokoro model."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Tanner Vass" }]
keywords = ["podcast", "tts", "text-to-speech", "kokoro", "claude", "rss", "ai", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "kokoro>=0.9.4",
    "soundfile>=0.12",
    "mutagen>=1.47",
    "pillow>=12.2.0",
    # NOTE: Kokoro's misaki G2P also needs the spaCy model `en_core_web_sm`. It is
    # NOT listed here because it ships only as a GitHub release wheel (a direct URL),
    # which PyPI rejects in package metadata. `earworm download-models` installs the
    # pinned wheel after install; the Dockerfile runs that at build time.
]

[project.urls]
Homepage = "https://github.com/vrennat/earworm"
Repository = "https://github.com/vrennat/earworm"
Issues = "https://github.com/vrennat/earworm/issues"

[project.scripts]
earworm = "earworm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earworm"]
# Guard: never bake a user's real (possibly secret-bearing) config into the wheel —
# only the *.example.toml templates are bundled. Belt-and-suspenders; the repo only
# tracks examples anyway.
exclude = [
    "earworm/_assets/config/voice.toml",
    "earworm/_assets/config/show.toml",
    "earworm/_assets/config/lexicon.toml",
    "earworm/_assets/config/pipeline.toml",
    "earworm/_assets/config/feed.toml",
    "earworm/_assets/config/secrets.toml",
    "earworm/_assets/config/earworm.toml",
    "earworm/_assets/config/cover.png",
]

# Bundle the prompts + config templates as package data so a `pip install earworm`
# (which only ships src/earworm) can still run and `earworm init` can scaffold them.
[tool.hatch.build.targets.wheel.force-include]
"prompts" = "earworm/_assets/prompts"
"config" = "earworm/_assets/config"
